--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "discord_bot",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "keywords": [],
